--- a/main.html
+++ b/main.html
@@ -2,18 +2,26 @@
     <head>
         <title>RPS</title>
         <link rel="stylesheet" type="text/css" href="main.css" />
-        <h1>Rock Paper Scissors!</h1>
-        <h2>Choose, Rock, Paper, Or Scissors</h2>
     </head>
 
     <body>
-        <ul>
-        <li>
-            <button class="btn" id="btn Choice-one">Rock</button>
-        <li>
-            <button class="btn" id="btn Choice-two">Paper</button>
-        <li>
-            <button class="btn" id="btn Choice-three">Scissors</button>
+        <div class="btn-container">
+            <button class = "btn" id="rock">Rock</button>
+            <button class = "btn" id="paper">Paper</button>
+            <button class = "btn" id="scissors">Scissors</button>
+        </div>
+        <div class="info">
+            <h2 id="user"></h2>
+            <h2 id="opponent"></h2>
+            <h1 id="result"></h1>
+        </div>
+        <div class="container">
+                <imgd src="http://harboarts.com/shirtdesigner/jpg_design_exports/rock-hand-sign-cartoon-vector-graphic_1361455088639.jpg" class="hand" id="rock-img" />
+                <imgd src="https://previews.123rf.com/images/julinzy/julinzy1310/julinzy131000180/23262904-hand-sign-of-rock-paper-scissors-game-isolated-vector-on-white-background.jpg" class="hand" id="paper-img" />
+                <imgd src="https://image.shutterstock.com/image-vector/female-hand-sign-victory-peace-260nw-400873552.jpg" class="hand" id="scissors-img" />
+            </div>
+       
+        
         <script src="index.js"></script>
     </body>
 </html>
